--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@ border-bottom: 1pt solid black;
 .paper {
     font-size: 15px;
   }
+.research {
+    font-size: 20px;
+  }
 </style>
 
 <!-- Navigation -->
@@ -79,7 +82,7 @@ border-bottom: 1pt solid black;
           <h2 id="research_interests">Research Interests</h2>
                 
           <ul>
-          <li class="paper">Medical Imaging, Computational Imaging, Inverse Problems, Explainable AI, Generative AI, Signal Processing, Deep Learning, Diffusion Models, Transformers, Image and Signal Reconstruction, Calibration, Compressed Sensing, Optimization, Parallel Computing.</li>
+          <li class="research">Medical Imaging, Computational Imaging, Inverse Problems, Explainable AI, Generative AI, Signal Processing, Deep Learning, Diffusion Models, Transformers, Image and Signal Reconstruction, Calibration, Compressed Sensing, Optimization, Parallel Computing, Web Design.</li>
           </ul>
 
         
