--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
   <link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
 </head>
 <body>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3SX8G4EHQZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3SX8G4EHQZ');
+</script>
 
   <style>
 table {
@@ -509,5 +518,6 @@ border-bottom: 1pt solid black;
     <a style="color:#b5bec9;font-size:0.8em; float:right;" href="https://github.com/mavroudisv/plain-academic">Plain Academic</a> 
     
 </body>
+<script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=ZiA-xAS5fiNnDz0UueRZb-6Sj26EjU9vKaSu03mFCA8"></script>
 
 </html>
