--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 </head>
 <body>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-3SX8G4EHQZ"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QJ2NL5ZG66"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-3SX8G4EHQZ');
+  gtag('config', 'G-QJ2NL5ZG66');
 </script>
 
   <style>
