--- a/publications.html
+++ b/publications.html
@@ -17,13 +17,13 @@
 </head>
 <body>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-3SX8G4EHQZ"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QJ2NL5ZG66"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-3SX8G4EHQZ');
+  gtag('config', 'G-QJ2NL5ZG66');
 </script>
 
 <style>
@@ -197,7 +197,7 @@ li::before {
     
     <!-- Other people may like it too! -->
     <a style="color:#b5bec9;font-size:0.8em; float:right;" href="https://github.com/mavroudisv/plain-academic">Plain Academic</a> 
-    
+
     <a href="https://clustrmaps.com/site/1bxso" title="Visit tracker"><img style="display: none;" src="//www.clustrmaps.com/map_v2.png?d=ZiA-xAS5fiNnDz0UueRZb-6Sj26EjU9vKaSu03mFCA8&cl=ffffff"></a>
 
 </body>
