--- a/publications.html
+++ b/publications.html
@@ -74,7 +74,7 @@ li::before {
         <div class="row">
 
             <!-- Entries Column -->
-            <div class="col-md-8" style="height: 70vh;">
+            <div class="col-md-8">
                 <h2 id="projects">Journals, Conferences, Patents</h2>
                 
                 <strong style="font-size: 25px;">Book Chapter:</strong><br/>
