--- a/index.html
+++ b/index.html
@@ -510,8 +510,7 @@ border-bottom: 1pt solid black;
     <!-- Other people may like it too! -->
     <a style="color:#b5bec9;font-size:0.8em; float:right;" href="https://github.com/mavroudisv/plain-academic">Plain Academic</a> 
     
-<!--  <a href="https://clustrmaps.com/site/1bxso" title="Visit tracker"><img style="display: none;" src="//www.clustrmaps.com/map_v2.png?d=ZiA-xAS5fiNnDz0UueRZb-6Sj26EjU9vKaSu03mFCA8&cl=ffffff"></a>
--->
+  <a href="https://clustrmaps.com/site/1bxso" title="Visit tracker"><img style="display: none;" src="//www.clustrmaps.com/map_v2.png?d=ZiA-xAS5fiNnDz0UueRZb-6Sj26EjU9vKaSu03mFCA8&cl=ffffff"></a>
   </body>
 
 </html>
