--- a/index.html
+++ b/index.html
@@ -14,33 +14,33 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QJ2NL5ZG66"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-QJ2NL5ZG66');
+  </script>
+  
+    <style>
+  table {
+  border-collapse: collapse;
+  }
+  
+  tr {
+  border-bottom: 1pt solid black;
+  }
+  .paper {
+      font-size: 15px;
+    }
+  .research {
+      font-size: 20px;
+    }
+  </style>
 </head>
 <body>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-QJ2NL5ZG66"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-QJ2NL5ZG66');
-</script>
-
-  <style>
-table {
-border-collapse: collapse;
-}
-
-tr {
-border-bottom: 1pt solid black;
-}
-.paper {
-    font-size: 15px;
-  }
-.research {
-    font-size: 20px;
-  }
-</style>
 
 <!-- Navigation -->
 	<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
@@ -126,9 +126,9 @@ border-bottom: 1pt solid black;
         </div>
 
             <div class="row" >
-              <div class="col-md-8", style="border-bottom: 1px solid black; padding-top:20px">
-                <div class="col-md-6", style="text-align: center;">
-                <img src="images/deq-mpi.jfif" width="100%" >
+              <div class="col-md-8" style="border-bottom: 1px solid black; padding-top:20px">
+                <div class="col-md-6" style="text-align: center;">
+                <img src="images/deq-mpi.jfif" style="width:100%" >
               </div>
               <div class="col-md-6">
 
