--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <h2 id="research_interests">Research Interests</h2>
                 
           <ul>
-          <li class="research">Medical Imaging, Computational Imaging, Inverse Problems, Explainable AI, Generative AI, Signal Processing, Deep Learning, Diffusion Models, Transformers, Image and Signal Reconstruction, Calibration, Compressed Sensing, Optimization, Parallel Computing, Web Design.</li>
+          <li class="research">Medical Imaging, Computational Imaging, Inverse Problems, Explainable AI, Generative AI, Signal Processing, Deep Learning, Diffusion Models, Transformers, Image and Signal Reconstruction, Calibration, Compressed Sensing, Optimization, Parallel Computing.</li>
           </ul>
 
         
